--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -21,12 +21,12 @@ const img = 'https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspo
 					</div>
 				</div>
 				<div class="swiper-pagination"></div>
-				<div class="swiper-button-next relative !w-auto group">
+				<div class="swiper-button-next !w-auto group">
 					<div class="h-[3px] w-[63px] bg-gold-100 transition-all duration-500 ease-in-out group-hover:w-[70px] group-hover:ml-[-7.5px]"></div>
 					<Icon class="absolute left-12 !w-3" name="allow" />
 					<Icon class="absolute left-10 !w-3" name="allow" />
 				</div>
-				<div class="swiper-button-prev relative !w-auto group">
+				<div class="swiper-button-prev !w-auto group">
 					<div class="h-[3px] w-[63px] bg-gold-100 transition-all duration-500 ease-in-out group-hover:w-[70px] group-hover:mr-[-7.5px]"></div>
 					<Icon class="absolute right-12 !w-3 rotate-180" name="allow" />
 					<Icon class="absolute right-10 !w-3 rotate-180" name="allow" />
