fix: 修正 hover 時圖片無法變色問題，並且跟新 astro 版本

--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -25,3 +25,9 @@ import { Icon } from 'astro-icon/components';
 		</div>
 	</div>
 </main>
+<style>
+	Img:hover {
+		transition: filter 1s ease;
+		filter: grayscale(0%);
+	}
+</style>
