--- a/src/components/PhotoWall.astro
+++ b/src/components/PhotoWall.astro
@@ -185,4 +185,8 @@ const { pictureTitle } = Astro.props;
 		background-color: #f1ece0;
 		border-radius: 20px;
 	}
+	Img:hover {
+		transition: filter 1s ease;
+		filter: grayscale(0%);
+	}
 </style>
