--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -3,21 +3,27 @@ import { Icon } from 'astro-icon/components';
 ---
 
 <main class="max-w-[440px] object-fill flex flex-col gap-9">
-	<div>
+	<!-- 图片部分 -->
+	<div class="relative w-full overflow-hidden">
 		<img
-			class="w-full object-fill transition-transform grayscale duration-500"
+			class="w-full h-auto object-cover transition-transform duration-500 grayscale hover:grayscale-0"
 			src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 			alt="Slide 1"
+			width="440"
+			height="300"
+			loading="eager"
 		/>
 	</div>
 	<div class="flex flex-col gap-3">
-		<h3 class="font-black">日本巡禮：北海道十日遊</h3>
-		<p>此次旅程純粹想感受一下可出國的自由氛圍，在街頭漫步，看看人與吃吃東西。日本拉麵還是一樣鹹，生魚片與海鮮好吃，廟會料理味道太重且份量很足，生魚片與海鮮好吃，鰻魚飯吃起來有些甜...</p>
+		<h3 class="font-black text-lg">日本巡禮：北海道十日遊</h3>
+		<p class="text-sm leading-relaxed">
+			此次旅程純粹想感受一下可出國的自由氛圍，在街頭漫步，看看人與吃吃東西。日本拉麵還是一樣鹹，生魚片與海鮮好吃，廟會料理味道太重且份量很足，鰻魚飯吃起來有些甜...
+		</p>
 	</div>
-	<div class="flex gap-8">
-		<div class="bg-black flex-grow"></div>
-		<div class="relative !w-auto group cursor-pointer">
-			<a href="/blog">
+	<div class="flex gap-8 items-center">
+		<div class="bg-black flex-grow h-[1px]"></div>
+		<div class="relative group cursor-pointer">
+			<a href="/blog" class="inline-block">
 				<div class="h-[2px] w-[63px] bg-gold-100 transition-all duration-500 ease-in-out group-hover:w-[70px] group-hover:ml-[-7.5px]"></div>
 				<Icon class="absolute bottom-[-7px] left-12 !w-3" name="allow" />
 				<Icon class="absolute bottom-[-7px] left-10 !w-3" name="allow" />
@@ -26,7 +32,7 @@ import { Icon } from 'astro-icon/components';
 	</div>
 </main>
 <style>
-	Img:hover {
+	img:hover {
 		transition: filter 1s ease;
 		filter: grayscale(0%);
 	}
