fix: 調整部分檔案 css 及更新 astro 和相關套件版本
1. 更新 PhotoWall.astro 和 index.astro 部分 css 內容
2. 更新 astro 和相關套件版本

--- a/src/components/PhotoWall.astro
+++ b/src/components/PhotoWall.astro
@@ -10,163 +10,163 @@ const { pictureTitle } = Astro.props;
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/><img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/><img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/><img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/><img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
 	<img
-		class="w-[200px] h-[200px] transition-transform grayscale duration-500"
+		class="min-w-[200px] h-[200px] transition-transform grayscale duration-500"
 		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
 		alt="Slide 1"
 	/>
