--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -31,7 +31,7 @@ const img = 'https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspo
 					<Icon class="absolute right-10 !w-3 rotate-180" name="allow" />
 				</div>
 			</div>
-			<h1 class="font-quattrocento text-8xl font-normal leading-tight text-center mb-4 text-gold-100 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-50">
+			<h1 class="font-quattrocento text-[8vw] font-normal leading-tight text-center mb-4 text-gold-100 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-50">
 				<span> Photograph </span>
 				<span>What You Love</span>
 			</h1>
@@ -97,7 +97,7 @@ const img = 'https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspo
 <style>
 	.swiper {
 		--swiper-pagination-color: #d9bb73 !important;
-		--swiper-pagination-bullet-width: 64px; /* 调整宽度 */
+		--swiper-pagination-bullet-width: 5vw; /* 调整宽度 */
 		--swiper-pagination-bullet-height: 4px; /* 激活狀態的顏色 */
 		--swiper-pagination-bullet-border-radius: 4px;
 	}
