--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,9 +1,10 @@
 ---
 import { Icon } from 'astro-icon/components';
 ---
-<footer class="flex flex-col gap-[30px] w-full">
-	<div class="border border-black min-w-[500px] max-w-[1600px] mx-auto w-full"></div>
-	<div class="flex justify-center gap-28">
+
+<footer class="flex flex-col gap-[30px] w-full p-7">
+	<div class="border border-black mx-auto w-full"></div>
+	<div class="flex justify-center gap-28 flex-wrap">
 		<div class="flex-1 flex justify-center">
 			<Icon class="text-3xl" name="name" />
 		</div>
@@ -15,6 +16,6 @@ import { Icon } from 'astro-icon/components';
 			<a href="mailto:lockon5445@gmail.com" target="_blank" class="icon-hover-fill-blue-dark" title="email">lockon5445@gmail.com </a>
 		</div>
 	</div>
-	<div class="border border-black max-w-[1600px] mx-auto w-full"></div>
+	<div class="border border-black mx-auto w-full"></div>
 	<div class="text-center">2024 © LOCKON All rights reserved.</div>
 </footer>
