feat: 初步完成 rwd 畫面
1. 修正各頁面 css 內容，使其避免跑版

--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -4,7 +4,7 @@ import { Icon } from 'astro-icon/components';
 
 <footer class="flex flex-col gap-[30px] w-full p-7">
 	<div class="border border-black mx-auto w-full"></div>
-	<div class="flex justify-center gap-28 flex-wrap">
+	<div class="flex justify-center sm:gap-28 gap-10 flex-wrap">
 		<div class="flex-1 flex justify-center">
 			<Icon class="text-3xl" name="name" />
 		</div>
