--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ const img = 'https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspo
 				<span>What You Love</span>
 			</h1>
 		</div>
-		<div class="flex items-center justify-center p-4 gap-[135px] flex-wrap">
+		<div class="flex items-center justify-center p-4 sm:gap-[135px] gap-[30px]  flex-wrap">
 			<div class="flex flex-col">
 				<h2 class="font-normal text-[clamp(20px,5vw,80px)]">Lockon</h2>
 				<div class="flex flex-col sm:flex-row">
@@ -46,14 +46,14 @@ const img = 'https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspo
 						<span>SHIH</span>
 						<span>YUAN</span>
 					</div>
-					<div class="flex relative w-[420px] justify-end">
-						<img class="absolute right-[140px]" src="/circle.png" alt="circle" />
+					<div class="flex relative sm:w-[420px] justify-end">
+						<img class="absolute sm:right-[140px]" src="/circle.png" alt="circle" />
 						<img src="/avatar.png" alt="avatar" />
 					</div>
 				</div>
 			</div>
 			<div class="flex flex-col w-[360px]">
-				<div class="flex gap-6 items-center mb-[108px]">
+				<div class="flex gap-6 items-center sm:mb-[108px] mb-[30px]">
 					<h3 class="text-4xl font-black tracking-[.8rem] font-sans text-nowrap">賴世原</h3>
 					<span class="text-sm font-normal">Photographer</span>
 				</div>
