--- a/src/components/BlogCard.astro
+++ b/src/components/BlogCard.astro
@@ -2,7 +2,7 @@
 import { Icon } from 'astro-icon/components';
 ---
 
-<main class="max-w-[440px] object-fill flex flex-col gap-9">
+<main class="max-w-[440px] object-fill flex flex-col gap-2 sm:gap-9">
 	<!-- 图片部分 -->
 	<div class="relative w-full overflow-hidden">
 		<img
