--- a/src/layouts/Header.astro
+++ b/src/layouts/Header.astro
@@ -2,19 +2,20 @@
 import { Icon } from 'astro-icon/components';
 const isHomePage = Astro.url.pathname === '/';
 ---
-<header class={`w-full z-20 ${isHomePage ? 'absolute top-50 left-50' : ''}`}>
-	<div class="bg-transparent flex h-[130px] items-center">
+
+<header class={`w-full z-20 ${isHomePage ? 'sm:absolute top-50 left-50' : ''} `}>
+	<div class="bg-orange-800 sm:bg-transparent h-[50px] sm:h-[130px] flex items-center">
 		<div class="flex-1 flex justify-center items-center">
-			<Icon class="text-3xl" name="name" />
+			<Icon class="text-[4vw] sm:text-3xl" name="name" />
 		</div>
 		<div class="flex-1 flex justify-center items-center">
 			<a href="/">
-				<Icon class="text-3xl" name="logo" />
+				<Icon class="text-[4vw] sm:text-3xl" name="logo" />
 			</a>
 		</div>
-		<div class="flex-1 flex justify-center items-center gap-12">
-			<a class="text-black hover:text-gold-100 transition-all duration-500 ease-in-out" href="/Photograph">PORTFOLIO</a>
-			<a class="text-black hover:text-gold-100 transition-all duration-500 ease-in-out" href="/Journal">JOURNAL</a>
+		<div class="flex-1 flex justify-center items-center sm:gap-12 gap-3">
+			<a class="text-black hover:text-gold-100 transition-all duration-500 ease-in-out text-[2vw] sm:text-lg" href="/Photograph">PORTFOLIO</a>
+			<a class="text-black hover:text-gold-100 transition-all duration-500 ease-in-out text-[2vw] sm:text-lg" href="/Journal">JOURNAL</a>
 		</div>
 	</div>
 </header>
