feat: 提高個人部落格 seo 相關內容
1. 安裝 sitemap 相關套件和新增 robot.txt 檔
2. 更新 astro 版本至 5.16.4
3. 更新 readme 相關內容
4. 將 astro.config.mjs 換為 astro.config.ts
5. 新增 FAQSchema.json 檔案強化 seo
6. 調整各檔案 html 及 css 結構

--- a/src/pages/Journal.astro
+++ b/src/pages/Journal.astro
@@ -7,7 +7,7 @@ let pictureTitle = title[0];
 ---
 
 <Layout title="lockon">
-	<main class="p-8 sm:px-[103px] sm:py-0 h-[calc(100vh-130px-148px-64px)] sm:h-[calc(100vh-130px-148px)]">
+	<main class="p-8 sm:px-[103px] sm:py-0">
 		<div class="flex justify-between h-full gap-8">
 			<div class="md:min-w-[161px]">
 				{
@@ -19,14 +19,14 @@ let pictureTitle = title[0];
 					))
 				}
 			</div>
-			<div class="flex gap-[40px] flex-wrap h-full overflow-auto scroll pb-5">
+			<div class="flex gap-[40px] flex-wrap overflow-auto scroll pb-5 justify-center  h-[calc(100vh-130px-148px-64px)] sm:h-[calc(100vh-130px-148px)]">
 				<BlogCard pictureTitle={pictureTitle} />
 				<BlogCard pictureTitle={pictureTitle} />
 				<BlogCard pictureTitle={pictureTitle} />
 				<BlogCard pictureTitle={pictureTitle} />
 			</div>
 			<div>
-				<h2 class="hollow-text hidden md:flex">JOURNAL</h2>
+				<h1 class="hollow-text hidden md:flex">JOURNAL</h1>
 			</div>
 		</div>
 	</main>
