--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,10 +32,10 @@ const img = 'https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspo
 					<Icon class="absolute right-10 !w-3 rotate-180" name="allow" />
 				</div>
 			</div>
-			<h1 class="font-quattrocento text-[8vw] font-normal leading-tight text-center mb-4 text-gold-100 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-50">
+			<h2 class="font-quattrocento text-[8vw] font-normal leading-tight text-center mb-4 text-gold-100 absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 z-50">
 				<span> Photograph </span>
 				<span>What You Love</span>
-			</h1>
+			</h2>
 		</div>
 		<div class="flex items-center justify-center p-4 sm:gap-[135px] gap-[30px]  flex-wrap">
 			<div class="flex flex-col">
@@ -54,7 +54,7 @@ const img = 'https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspo
 			</div>
 			<div class="flex flex-col w-[360px]">
 				<div class="flex gap-6 items-center sm:mb-[108px] mb-[30px]">
-					<h3 class="text-4xl font-black tracking-[.8rem] font-sans text-nowrap">賴世原</h3>
+					<h1 class="text-4xl font-black tracking-[.8rem] font-sans text-nowrap">賴世原</h1>
 					<span class="text-sm font-normal">Photographer</span>
 				</div>
 				<div class="mb-[45px]">
@@ -62,8 +62,7 @@ const img = 'https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspo
 				</div>
 				<div>
 					<p>
-						Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus non necessitatibus optio, quo enim quas a autem minima alias, rem architecto nam incidunt itaque neque in
-						aperiam? Excepturi, fuga quasi.
+						這是 Lockon 的個人攝影與旅遊誌網站，透過 Astro + Tailwind 打造。首頁有全幅輪播，作品集展示攝影作品，Journal 記錄旅途故事，並提供社群與信箱方便聯繫。
 					</p>
 				</div>
 			</div>
