--- a/src/components/PhotoWall.astro
+++ b/src/components/PhotoWall.astro
@@ -1,156 +1,16 @@
 ---
 const { pictureTitle } = Astro.props;
+const photos = Array.from({ length: 12 }, () => ({
+  src: 'https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31',
+  alt: 'Slide 1',
+}));
 ---
 
-<h3 id="pictureTitle" class="flex justify-center md:justify-between">{pictureTitle}</h3>
-<div class="flex gap-[40px] flex-wrap overflow-auto scroll h-[calc(100vh-130px-64px-148px-40px)] w-full pb-5 justify-center md:justify-between">
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
-	<img
-		class="min-w-[200px] max-w-[200px] h-[200px] transition-transform grayscale duration-500"
-		src="https://firebasestorage.googleapis.com/v0/b/astro-blog-dad91.appspot.com/o/astro-blog-image%2Ffirst.jpg?alt=media&token=f9a56102-fd2c-4701-9209-2a6cfbeaff31"
-		alt="Slide 1"
-	/>
+<div class="flex flex-col gap-4 w-full">
+	<h3 id="pictureTitle" class="w-full text-center md:text-left">{pictureTitle}</h3>
+	<div class="grid [grid-template-columns:repeat(auto-fit,minmax(140px,1fr))] gap-4 w-full pb-5">
+		{photos.map((photo) => (
+			<img class="w-full aspect-square object-cover transition duration-500 grayscale hover:grayscale-0" src={photo.src} alt={photo.alt} loading="lazy" />
+		))}
+	</div>
 </div>
-<style>
-	.scroll::-webkit-scrollbar-track {
-		background-color: #f1ece0;
-	}
-	/* 捲軸寬度 */
-	.scroll::-webkit-scrollbar {
-		width: 6px;
-		background-color: #f1ece0;
-	}
-	/* 捲軸本體顏色 */
-	.scroll::-webkit-scrollbar-thumb {
-		background-color: #f1ece0;
-		border-radius: 20px;
-	}
-	Img:hover {
-		transition: filter 1s ease;
-		filter: grayscale(0%);
-	}
-</style>
