--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,38 +1,44 @@
 ---
-import Footer from './Footer.astro';
-import Header from './Header.astro';
+import Footer from "./Footer.astro";
+import Header from "./Header.astro";
+import FAQSchema from "../seo/FAQSchema.json";
 const { title } = Astro.props;
+const faqJson = JSON.stringify(FAQSchema);
 ---
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body class="bg-custom-beige">
-		<Header />
-		<slot />
-		<Footer />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Lockon 賴世原｜前端工程師，個人作品集、攝影紀錄、旅拍影像與影像創作。"
+    />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+    <script is:inline type="application/ld+json" set:html={faqJson} />
+  </head>
+  <body class="bg-custom-beige">
+    <Header />
+    <slot />
+    <Footer />
+  </body>
 </html>
 <style is:global>
-	:root {
-		box-sizing: border-box;
-		font-family:
-			system-ui,
-			-apple-system,
-			BlinkMacSystemFont,
-			'Segoe UI',
-			Roboto,
-			Oxygen,
-			Ubuntu,
-			Cantarell,
-			'Open Sans',
-			'Helvetica Neue',
-			sans-serif;
-	}
+  :root {
+    box-sizing: border-box;
+    font-family:
+      system-ui,
+      -apple-system,
+      BlinkMacSystemFont,
+      "Segoe UI",
+      Roboto,
+      Oxygen,
+      Ubuntu,
+      Cantarell,
+      "Open Sans",
+      "Helvetica Neue",
+      sans-serif;
+  }
 </style>
